force-app/main/default/objects/Preferred_Trade_Vendor__c/Preferred_Trade_Vendor__c.object-meta.xml
<CustomObject>
    <label>Preferred Trade Vendor</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Preferred Trade Vendor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred Vendors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>