force-app/main/default/objects/Preferred_Trade_Vendor__c/fields/Secondary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Preferred Vendors</relationshipLabel>
    <relationshipName>Preferred_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>