force-app/main/default/objects/Preferred_Trade_Vendor__c/fields/Sites__c.field-meta.xml
<CustomField>
    <fullName>Sites__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sites</label>
    <referenceTo>Sites__c</referenceTo>
    <relationshipLabel>Preferred Vendors</relationshipLabel>
    <relationshipName>Preferred_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>