force-app/main/default/objects/Preferred_Trade_Vendor__c/fields/Tertiary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Preferred Vendors (Tertiary Vendor)</relationshipLabel>
    <relationshipName>Preferred_Vendors1</relationshipName>
    <type>Lookup</type>
</CustomField>