force-app/main/default/objects/Preferred_Trade_Vendor__c/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade</label>
    <referenceTo>Trade__c</referenceTo>
    <relationshipLabel>Preferred Vendors</relationshipLabel>
    <relationshipName>Preferred_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>