force-app/main/default/objects/Preferred_Trade_Vendor__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Preferred Vendors (Vendor)</relationshipLabel>
    <relationshipName>Preferred_Vendors2</relationshipName>
    <type>Lookup</type>
</CustomField>