force-app/main/default/objects/Preferred_Trade_Vendor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trade__c</columns>
    <columns>Sites__c</columns>
    <columns>Vendor__c</columns>
    <columns>Auto_Assign__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>